/* Copyright 2019 The MLPerf Authors. All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
==============================================================================*/
syntax = "proto2";

package org.mlperf.proto;

option cc_enable_arenas = true;
option java_multiple_files = true;
option java_package = "org.mlperf.proto";

// Config of a mlperf run.
//
// Next ID: 2
message MLPerfConfig {
  // All tasks will be run.
  repeated TaskConfig task = 1;
}

// Config of the mlperf tasks.
// A task is basically a combination of models and a dataset.
//
// Next ID: 6
message TaskConfig {
  // Name of the task. Ex: Image classification.
  required string name = 1;
  // The dataset used in this task.
  required DatasetConfig dataset = 2;
  // Models to run in this task.
  repeated ModelConfig model = 3;
  // Minimum number of samples the test should run in the performance mode.
  required int32 min_query_count = 4;
  // Minimum duration the test should run in the performance mode.
  required int32 min_duration_ms = 5;
}

// Config of the dataset.
//
// Next ID: 7
message DatasetConfig {
  // Name of the dataset.
  required string name = 1;
  // Type of the dataset.
  enum DatasetType {
    IMAGENET = 0;
    COCO = 1;
  }
  required DatasetType type = 2;
  // Path to the dataset.
  required string path = 3;
  // Path to the ground truth file of the dataset.
  // If not available, the file will be downloaded from groundtruth_src.
  required string groundtruth_path = 4;
  // Path to download the ground truth file if groundtruth_path not available.
  // Could be: http, https, or @assets/file (for files embedded in assets).
  optional string groundtruth_src = 5;
  // True if images in this dataset is raw.
  optional bool is_raw_images = 6 [default = false];
}

// Config of a model.
//
// Next ID: 8
message ModelConfig {
  // Name of the model.
  required string name = 1;
  // Number of inputs.
  required int32 num_inputs = 2;
  // Number of outputs.
  required int32 num_outputs = 3;
  // Path to the model. If not available, will be downloaded from src.
  required string path = 4;
  // Path to download the model if path is not available.
  // Could be: http, https, or @assets/file (for files embedded in assets).
  optional string src = 5;
  // Offset value of the model if applicable.
  optional int32 offset = 6 [default = 0];
  // Tags related to the models.
  optional string tags = 7;
}
